# ollama-library

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml
cli/: fetch-ollama-models.sh
src/ollama_library/: config.py  main.py
src/ollama_library/api/: endpoints.py
src/ollama_library/exceptions/: scraper.py
src/ollama_library/models/: schemas.py
src/ollama_library/scraper/: scraper.py
tests/: test_api.py
